// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CharacterCounter /> AtTotal story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count"
  >
    10
  </span>
   / 
  10
</div>
`;

exports[`<CharacterCounter /> CountChanging story renders snapshot 1`] = `
<div
  class="flex w-[384px] flex-col gap-spacing-size-1"
>
  <input
    aria-label="Type to change the count"
    class="input"
    value="Some initial text"
  />
  <div
    class="text text--body-sm character-counter"
  >
    <span
      class="character-counter__count"
    >
      17
    </span>
     / 
    20
  </div>
</div>
`;

exports[`<CharacterCounter /> Default story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count"
  >
    3
  </span>
   / 
  10
</div>
`;

exports[`<CharacterCounter /> EmptyCount story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count"
  >
    0
  </span>
   / 
  10
</div>
`;

exports[`<CharacterCounter /> NegativeTotal story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count character-counter__count--invalid"
  >
    3
  </span>
   / 
  -10
</div>
`;

exports[`<CharacterCounter /> OverTotal story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count character-counter__count--invalid"
  >
    12
  </span>
   / 
  10
</div>
`;

exports[`<CharacterCounter /> Percentage story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count"
  >
    30
    %
  </span>
</div>
`;

exports[`<CharacterCounter /> PercentageChanging story renders snapshot 1`] = `
<div
  class="flex w-[384px] flex-col gap-spacing-size-1"
>
  <input
    aria-label="Type to change the count"
    class="input"
    value="Some initial text"
  />
  <div
    class="text text--body-sm character-counter"
  >
    <span
      class="character-counter__count"
    >
      85
      %
    </span>
  </div>
</div>
`;

exports[`<CharacterCounter /> PercentageOverTotal story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count character-counter__count--invalid"
  >
    120
    %
  </span>
</div>
`;

exports[`<CharacterCounter /> PercentageRounded story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count"
  >
    33
    %
  </span>
</div>
`;

exports[`<CharacterCounter /> PercentageZeroTotal story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count character-counter__count--invalid"
  >
    0
    %
  </span>
</div>
`;

exports[`<CharacterCounter /> ZeroTotal story renders snapshot 1`] = `
<div
  class="text text--body-sm character-counter"
>
  <span
    class="character-counter__count character-counter__count--invalid"
  >
    3
  </span>
   / 
  0
</div>
`;
